solved last alignment issues of query header

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -16,19 +16,11 @@ html, body {
 /* 	font-size: 40px; */
 /* 	cursor: pointer; */
 /* } */
-#queryHeaderBackground {
-	position:fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	width: 100%;
-	background: white;
-	z-index: 9;
-}
+
 .scrollableTabContent {
 	padding-top: 4px;
 	height: 100%;
-	overflow:auto
+	overflow:auto;
 	width: 100%;
 }
 .ui-icon.queryIcon, .ui-icon.queryIconInvalid, .ui-icon.queryIconBusy {
@@ -75,54 +67,17 @@ html, body {
 	height: 36px;
 }
 
-/* .header { */
-/* 	top: 0px; */
-/* 	left: 0px; */
-/* 	right: 0px; */
-/* 	position: fixed; */
-/* 	width: 100%; */
-/* 	height: 50px; */
-/* 	z-index: 10; */
-/* 	background-color: white; */
-/* } */
 
-/* .mainContent { */
-/* 	padding-top: 50px; */
-/* } */
-
-/* #queryIcon { */
-/* 	position: absolute; */
-/* 	left: 0px; */
-/* 	top: 40px; */
-/* 	cursor: pointer; */
-/* } */
-.queryIcon img {
-	max-width:100%; max-height:100%;
-/* 	height:34px;width:48px; */
-}
 .configRequestButton{
-/* 	top: 2px; */
-	top: 0px; bottom: 0px;
-/* 	position: absolute; */
-/* 	padding: 3px 0; */
-/* 	padding: auto; */
+	top: 0px; 
+	bottom: 0px;
 	margin: auto;
 }
 .queryHeader li .configRequestButton span{
 	padding-top: 3px;
 	padding-bottom: 3px;
 }
-.queryIcon {
-/* 	display: inline-block; */
-}
-/* .queryIcon { */
-/* 	 position: absolute; */
-/*     top: -9999px; */
-/*     bottom: -9999px; */
-/*     left: -9999px; */
-/*     right: -9999px; */
-/*     margin: auto; */
-/* } */
+
 
 #loginButtons {
 	position: absolute;
