--- a/client/css/queryHeader.css
+++ b/client/css/queryHeader.css
@@ -7,11 +7,11 @@
     list-style-type: none;
     padding-left: 0;
     margin: 0;
-    height: 44px;
+    height: 30px;
 }
 .queryHeader li {
 	float:left;
-	margin-left: 6px;
+	margin-left: 4px;
 	height: 27px;
 	position: relative;
 	
@@ -22,4 +22,13 @@
 	position: absolute;
 	bottom: 0px;
 	top: 0px;
+}
+#queryHeaderBackground {
+	position:fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	background: white;
+	z-index: 9;
 }
